--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,4 @@ jobs:
       - name: Push to hub
         env:
           HF: ${{ secrets.HF }}
-        run: git push -force https://EuphyTheLuffy:$HF@huggingface.co/spaces/EuphyTheLuffy/SentimentAnalysis main
+        run: git push --force https://EuphyTheLuffy:$HF@huggingface.co/spaces/EuphyTheLuffy/SentimentAnalysis main
