--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,4 @@ jobs:
         run: git remote add space https://EuphyTheLuffy:$HF@huggingface.co/spaces/EuphyTheLuffy/SentimentAnalysis
 
       - name: Push to hub
-        env:
-          HF: ${{ secrets.HF }}
-        run: git push --force https://EuphyTheLuffy:$HF@huggingface.co/spaces/EuphyTheLuffy/SentimentAnalysis main
+        run: git push --force space main
