--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ MarkupSafe==3.0.3
 mdurl==0.1.2
 ml_dtypes==0.5.3
 mpmath==1.3.0
-namex==0.1.0
+#namex==0.1.0
 networkx==3.5
 numpy==2.3.4
 nvidia-cublas-cu12==12.8.4.1
