--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Log in to Hugging Face
         run: |
           pip install huggingface_hub
-          huggingface-cli login --token ${{secrets.HF}}
+          python -m huggingface_hub login "${{ secrets.HF }}"
 
       #3. Build Docker image
       - name: Build Docker image
