--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,8 @@ jobs:
           git clone https://huggingface.co/spaces/EuphyTheLuffy/SentimentAnalysisGradioApp hf_space
           rsync -av --exclude '.git' --exclude 'hf_space' . hf_space/
           cd hf_space
+          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Action"
           git add .
           git commit -m "Deploy updated Docker container"
           git push
