--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,24 +13,20 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      
+          lfs: true
 
-      #2. Log in to Hugging Face
-      - name: Log in to Hugging Face
-        run: |
-          pip install huggingface_hub
-          hf auth login --token "${{ secrets.HF }}"
-
-      #3. Build Docker image
+      #2. Build Docker image
       - name: Build Docker image
         run: docker build -t sentiment-app .
 
-      #4. Push Docker image to Hugging Face Spaces
+      #3. Push Docker image to Hugging Face Spaces
       - name: Push to Hugging Face Spaces
+        env:
+          HF_TOKEN: ${{ secrets.HF }}
         run: |
           pip install git-lfs
           # Replace USER/REPO with your Hugging Face Space repo
-          git clone https://huggingface.co/spaces/EuphyTheLuffy/SentimentAnalysisGradioApp hf_space
+          git clone https://EuphyTheLuffy:$HF_TOKEN@huggingface.co/spaces/EuphyTheLuffy/SentimentAnalysisGradioApp hf_space
           rsync -av --exclude '.git' --exclude 'hf_space' . hf_space/
           cd hf_space
           git config --global user.email "action@github.com"
