--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,9 @@
 name: Build and Deploy to Hugging Face Spaces
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main  
 
 jobs:
   build-and-deploy:
